# datafog-instructor

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.MD  README.md  config.json  docker-compose.yaml  env.example  fogprint.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: beta-cicd.yml  dev-cicd.yml  feature-cicd.yml  main-cicd.yml  publish-pypi.yml
app/: __init__.py  main.py  models.py
app/pii_redactor/: redactor.py
app/vision/: fileclassifier.py
datafog_instructor/: __init__.py  config.py  core.py  llm_factory.py  models.py  utils.py
docs/: conf.py
examples/: module_demo.py
tests/: conftest.py  test_fileclassifier.py  test_main.py  test_models.py
